# rnnoise-plugin

./: README.md
libs/FST/: .gitignore  CMakeLists.txt
libs/FST/docs/: VstSpeakerArrangment.md  audioMasterIdle.md  audioMasterWantMidi.md  effConnectOutput.md  effSetNumMidiInputChannels.md  struct_MidiKeyName.md
libs/FST/extra/: fst.pc
libs/FST/fst/: fst.h
libs/FST/notes/: vstplugin~.md
libs/FST/src/: fst_utils.h
libs/FST/src/FstHost/: FstHost.cpp
libs/FST/src/FstPlugin/: FstPlugin.cpp  Makefile
libs/FST/src/FstProxy/: FstProxy.cpp
libs/FST/tests/: CMakeLists.txt  Makefile  c_test.c  cxx_test.cpp  makefile.msvc
libs/FST/tools/: fstversion.sh
src/: RnNoisePlugin.cpp
src/juce/: RnNoiseAudioProcessor.cpp  RnNoisePluginEditor.cpp
